# pto-isa

./: .gitignore  PTO_ISA_improvement_ideas.md  README.md  TEST_REPORT.md  chat_transcript.md  config_example.py  new_updates.md  pto_compile.py  pto_dynamic_tiling.py  pto_isa_definition.py  pto_parser.py  pto_runtime.py  requirements.txt  update.md  visualize_taskgraph.py
docs/: FlexAttention_Algorithm_Analysis.md  getting-started.md  run_on_ascend_a3.md
examples/: pto_aten_ir_primitives.py  pto_fused_softmax.py  pto_isa_sinh.py  pto_llama7B_dynamic.py  pto_torch_flexattention.py  pto_torch_functional.py  pto_torch_nn_operators.py  pto_torch_tensor.py
examples/bgemm/: README.md  analyze_bgemm_performance.py  config.json  pto_bgemm.py  pto_bgemm_adaptive.py  run_arm64.py  run_ascend_a2a3.py  run_ascend_a2a3_sim.py
examples/output_arm64/aten_primitives/: aten_add_scalar.c  aten_cosh.c  aten_div_scalar.c  aten_gelu.c  aten_mean_row.c  aten_mm.c  aten_mul_scalar.c  aten_relu.c  aten_sigmoid.c  aten_silu.c  aten_sinh.c  aten_tanh.c  prims_abs.c  prims_add.c  prims_div.c  prims_exp.c  prims_log.c  prims_maximum.c  prims_minimum.c  prims_mul.c  prims_neg.c  prims_pow.c  prims_reciprocal.c  prims_rsqrt.c  prims_sqrt.c  prims_sub.c  prims_sum_row.c
examples/output_arm64/flex_attention/: attention_alibi.c  attention_causal_mask.c  attention_relative_position.c  attention_sliding_window.c  create_causal_mask.c  document_attention.c  flex_attention_block_mask.c  flex_attention_score_mod.c  linear_projection_qkv.c  mha_single_head.c  output_projection.c  prefix_lm_attention.c  scaled_dot_product_attention.c  score_to_weight.c  sdpa_with_scale.c  soft_capping_attention.c
examples/output_arm64/fused_softmax/: dynamic_softmax_task_graph.txt  elem_exp.c  rowexpanddiv.c  rowexpandsub.c  rowmax.c  rowsum.c
examples/output_arm64/llama7b/: attention_output_tile.c  attention_output_tile_64.c  attention_score_tile.c  attention_score_tile_64.c  flash_attn_init_state.c  flash_attn_normalize.c  flash_attn_output_update.c  flash_attn_score_block.c  flash_attn_softmax_update.c  linear_tile.c  linear_tile_64.c  llama_layer_dynamic_orchestration.c  residual_add_tile.c  residual_add_tile_64.c  rmsnorm_tile.c  rmsnorm_tile_64.c  rope_tile.c  rope_tile_64.c  softmax_tile.c  softmax_tile_64.c  swiglu_tile.c  swiglu_tile_64.c  tile_add.c  tile_add_64.c  tile_exp.c  tile_exp_64.c  tile_matmul.c  tile_matmul_64.c  tile_mul.c  tile_mul_64.c  tile_muls.c  tile_muls_64.c  tile_rowexpanddiv.c  tile_rowexpanddiv_64.c  tile_rowexpandmul.c  tile_rowexpandmul_64.c  tile_rowexpandsub.c  tile_rowexpandsub_64.c  tile_rowmax.c  tile_rowmax_64.c  (+6 more)
examples/output_arm64/sinh_taylor/: sinh_taylor.c
examples/output_arm64/smoke_ops/: op_abs.c  op_add.c  op_adds.c  op_colsum.c  op_copy.c  op_div.c  op_divs.c  op_expands.c  op_max.c  op_maxs.c  op_min.c  op_mins.c  op_mul.c  op_muls.c  op_neg.c  op_recip.c  op_relu.c  op_rowexpanddiv.c  op_rowmax.c  (+8 more)
include/: README.md  README_zh.md
include/pto/: README.md  README_zh.md  pto-inst.hpp
kernels/: README.md  README_zh.md
kernels/custom/: README.md  README_zh.md
kernels/python/: README.md  abs16.py  abs_add16.py  add16.py  axpy16.py  bias16.py  clamp16.py  flash_attention64_split.py  fma16.py  gemm16.py  gemm256.py  loop_add16.py  mul16.py  mul16_f16.py  neg16.py  pto_aten_ir_primitives.py  pto_fused_softmax.py  pto_isa_sinh.py  pto_llama7B_dynamic.py  pto_torch_flexattention.py  pto_torch_functional.py  pto_torch_nn_operators.py  pto_torch_tensor.py  pypto_api_suite.py  rowmax16.py  rowsum16.py  rowsum_abs16.py  rsqrt16.py  run_all_tests.py  run_gemm256.py  run_regression.py  scale16.py  sinh16.py  softmax16.py  softmax32x16.py  spmd_tiled_add256.py  spmd_tiled_rowsum256.py  spmd_tiled_transpose256.py  sub16.py  test_pto_aten_ir_primitives.py  (+11 more)
pto/: __init__.py  runtime.py
ref_runtime/example/: README.md  gemm16_ptoas.py  tprint16_ptoas.py
ref_runtime/python/: binary_compiler.py
runtime/: README.md
runtime/python/: binary_compiler.py  runtime_bindings.py  toolchain.py
runtime/src/aicpu/: CMakeLists.txt  device_log.cpp  device_log.h  kernel.cpp
runtime/src/host/: CMakeLists.txt  binary_loader.cpp  binary_loader.h  devicerunner.cpp  devicerunner.h  function_cache.h  kernel_compiler.cpp  kernel_compiler.h  memoryallocator.cpp  memoryallocator.h  pto_runtime_c_api.cpp  pto_runtime_c_api.h
runtime/tests/: test_aicore_compilation.py  test_aicpu_compilation.py  test_host_compilation.py
scripts/: run_examples.py  visualize_taskgraph.py
scripts/a3/: build_and_run_examples.sh  codegen_from_pto.py  compare_checksums.py  generate_smoke_ops.py  pto_npu_runner.cpp  smoke_one.sh  smoke_one_compare.sh  smoke_rowmax.sh
scripts/cpu/: pto_cpu_runner.cpp
src/compile/: pto_codegen_ascend_a2a3_sim.py  pto_compile.py  pto_to_ptoas.py
src/runtime/: pto_runtime_common.c  pto_runtime_common.h
(+922 files in other folders)
